# plimate-server

./: .dockerignore  Dockerfile  compose.yaml  main.py  openapi.json  pyproject.toml
.github/workflows/: github-actions.yaml
app/: main.py
app/api/v1/: __init__.py  academic.py  academics.py  activities.py  blocks.py  chats.py  clubs.py  comments.py  councils.py  follows.py  grades.py  mandatory.py  mentoring.py  networking.py  notifications.py  ocr.py  posts.py  reports.py  users.py  videos.py
app/core/: config.py  database.py  deps.py  nickname.py  notifications.py  push.py  supabase_client.py
app/schemas/: academic.py  activity.py  block.py  chat.py  club.py  comment.py  council.py  follow.py  grades.py  mandatory.py  mentoring.py  networking.py  notification.py  ocr.py  post.py  report.py  user.py  video.py
docs/: README.md  SEED_MENTOR_DATA.md  swagger-ui.html
scripts/: export_openapi.py  seed_mentor_data.sql
tests/: conftest.py  test_councils.py  test_mentoring.py  test_networking.py  test_reports.py  test_users.py  test_videos.py
