[tool.poetry]
name = "fastapiprojectforshinhan"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
fastapi = "^0.128.0"
uvicorn = "^0.40.0"
structlog = "^25.5.0"
black = "^25.12.0"
orjson = "^3.11.5"
sqlalchemy = "^2.0.45"
pydantic-settings = "^2.12.0"
asyncpg = "^0.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
